--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-markdown": "^10.1.0",
+    "@google-cloud/firestore": "^8.0.0",
     "@google/genai": "^1.30.0",
-    "react": "^19.2.0",
+    "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "lucide-react": "^0.554.0",
+    "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "firebase": "^12.6.0"
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/pdf-parse": "^1.1.5",
     "@vitejs/plugin-react": "^5.0.0",
+    "firebase-tools": "^14.26.0",
+    "pdf-parse": "^2.4.5",
+    "tsx": "^4.20.6",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
