--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^1.30.0",
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
+    "github-cli": "^0.0.5",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
